--- a/project/angular.json
+++ b/project/angular.json
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/project",
+            "outputPath": "dist/o_chaveiro/project",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
