--- a/project/netlify.toml
+++ b/project/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "project"
+  base = "dist/o_chaveiro/project"
   command = "npm run build"
   publish = "dist/o_chaveiro/project/browser"
   node_version = "18.13.0"
