--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "dist/o_chaveiro"
+  base = "o_chaveiro"
   command = "npm run build"
   publish = "dist/o_chaveiro/browser"
   node_version = "18.13.0"
