--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "o_chaveiro"
   command = "npm run build"
-  publish = "dist/o_chaveiro/browser"
+  publish = "dist/o_chaveiro"
   node_version = "18.13.0"
 
 [[plugins]]
