--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = ""
   command = "npm run build"
-  publish = "dist/o_chaveiro"
+  publish = "dist/o_chaveiro/browser"
   node_version = "18.13.0"
 
 [context.production.environment]
